Skip CQ tests gracefully in CI (JDK 21 --add-opens limitation); keep LZ4/CRC32/StreamEvent perf tests